<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchParent"
    tools:context=".SelectArenaActivity">

    <!-- Main background -->
    <ImageView
        android:id="@+id/background"
        style="@style/MainBackground"
        android:contentDescription="@string/background" />

    <!-- Main Heading/Select Arena text -->
    <TextView
        android:id="@+id/main_heading"
        style="@style/MainHeading"
        android:text="@string/select_arena" />

    <!-- Arena Image -->
    <com.makeramen.roundedimageview.RoundedImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/arena_image"
        style="@style/ArenaImage"
        android:layout_width="@dimen/arenaImageWidth"
        android:layout_height="@dimen/arenaImageHeight"
        android:layout_marginTop="@dimen/arenaImageMarginTop"
        android:layout_centerVertical="true"
        app:riv_border_color="@color/arenaImageBorderColor"
        app:riv_border_width="@dimen/arenaImageBorderWidth"
        app:riv_corner_radius="@dimen/standardSpacing" />

    <!-- Button for changing to previous arena -->
    <ImageButton
        android:id="@+id/button_prev"
        style="@style/ActionButtonWithVerticalMargin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/standardSpacing"
        android:contentDescription="@string/prev_arena_button"
        android:src="@drawable/selector_prev_button" />

    <!-- Button for selecting the arena -->
    <ImageButton
        android:id="@+id/button_select"
        style="@style/ActionButtonWithVerticalMargin"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/select_arena_button"
        android:src="@drawable/selector_select_button" />

    <!-- Button for changing to next arena -->
    <ImageButton
        android:id="@+id/button_next"
        style="@style/ActionButtonWithVerticalMargin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/standardSpacing"
        android:contentDescription="@string/next_arena_button"
        android:src="@drawable/selector_next_button" />
</RelativeLayout>