<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchParent"
    tools:context=".SelectSecondCharacterActivity">

    <!-- Main background -->
    <ImageView
        android:id="@+id/background"
        style="@style/MainBackground" />

    <!-- Main Heading/Select Second Fighter text -->
    <TextView
        android:id="@+id/main_heading"
        style="@style/MainHeading"
        android:text="@string/select_fighter_2" />

    <!-- Character Image -->
    <ImageView
        android:id="@+id/character_image"
        style="@style/CharacterImage" />

    <!-- Button for changing to previous character -->
    <ImageButton
        android:id="@+id/button_prev"
        style="@style/ActionButtonWithVerticalMargin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="@dimen/standardSpacing"
        android:layout_marginStart="@dimen/standardSpacing"
        android:layout_marginTop="@dimen/standardSpacing"
        android:contentDescription="@string/prev_character_button"
        android:src="@drawable/selector_prev_button" />

    <!-- Button for selecting first fighter -->
    <ImageButton
        android:id="@+id/button_select"
        style="@style/ActionButtonWithVerticalMargin"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/standardSpacing"
        android:layout_marginTop="@dimen/standardSpacing"
        android:contentDescription="@string/select_character_button"
        android:src="@drawable/selector_select_button" />

    <!-- Button for changing to next character -->
    <ImageButton
        android:id="@+id/button_next"
        style="@style/ActionButtonWithVerticalMargin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="@dimen/standardSpacing"
        android:layout_marginEnd="@dimen/standardSpacing"
        android:layout_marginTop="@dimen/standardSpacing"
        android:contentDescription="@string/next_character_button"
        android:src="@drawable/selector_next_button" />
</RelativeLayout>